Archive2/65/f38f866f610dbb/output
main.cpp:19:9: error: 'auto' return without trailing return type; deduced return types are a C++14 extension
        auto begin() const { return range_begin(_r); }
        ^
main.cpp:20:9: error: 'auto' return without trailing return type; deduced return types are a C++14 extension
        auto end()   const { return range_end(_r);   }
        ^
main.cpp:21:9: error: 'auto' return without trailing return type; deduced return types are a C++14 extension
        auto begin()       { return range_begin(_r); }
        ^
main.cpp:22:9: error: 'auto' return without trailing return type; deduced return types are a C++14 extension
        auto end()         { return range_end(_r);   }
        ^
main.cpp:28:27: error: 'auto' return without trailing return type; deduced return types are a C++14 extension
    template <typename R> auto make_proxy(R&& r) { return Proxy<R>(std::forward<R>(r)); }
                          ^
main.cpp:30:45: error: 'auto' return without trailing return type; deduced return types are a C++14 extension
    template <typename Range, typename Fun> auto map(Range&& p_range, Fun&& p_fun) {
                                            ^
main.cpp:34:46: error: 'auto' return without trailing return type; deduced return types are a C++14 extension
    template <typename Range, typename Pred> auto filter(Range&& p_range, Pred&& p_pred) {
                                             ^
main.cpp:43:38: error: no matching function for call to 'filter'
        std::vector<int> l_tmp_out = filter(l_in, [](int p){ return p < 4; });
                                     ^~~~~~
main.cpp:44:34: error: no matching function for call to 'map'
        std::vector<int> l_out = map(l_tmp_out, [](int p){ return p + 5; });
                                 ^~~
main.cpp:52:21: error: no matching function for call to 'filter'
                    filter(
                    ^~~~~~
10 errors generated.
